# cinder

./: Makefile  README.md  meson.build
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flatpak.yml  lint.yml
data/: com.avojak.cinder.appdata.xml.in.in  com.avojak.cinder.desktop.in.in  com.avojak.cinder.gresource.xml.in  com.avojak.cinder.gschema.xml.in  com.avojak.cinder.gschema.xml.in.in  meson.build
data/stylesheets/: style.css
flatpak/: com.avojak.cinder.yml
po/extra/: POTFILES
src/: Application.vala  MainWindow.vala  Settings.vala  Utils.vala  config.vala.in  meson.build
src/Models/: EmberMug.vala
src/Services/Bluetooth/: Adapter.vala  AdvertisementMonitor.vala  AdvertisementMonitorManager.vala  Agent.vala  AgentManager.vala  Device.vala  EmberDeviceManager.vala  GattCharacteristic.vala  GattDescriptor.vala  GattService.vala
src/Views/: DeviceControlView.vala  DeviceListView.vala  PresetsPage.vala  TemperatureControlPage.vala  WelcomeView.vala
src/Widgets/: ColorChooserDialog.vala  EmberDeviceRow.vala  HsvColorChooser.vala  PresetCard.vala  TemperatureControl.vala
vapi/: libevdev.vapi
